<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".DriverActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="64dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/first_car"
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_car"
                    android:tint="@android:color/white" />


                <TextView
                    android:id="@+id/driver_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:letterSpacing="0.3"
                    android:text="@string/driver_login"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/second_car"
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_car"
                    android:tint="@android:color/white" />
            </LinearLayout>

            <EditText
                android:id="@+id/driver_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorAccent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/driver_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/driver_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPink"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/driver_do_not_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/do_not_have_account"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>